[NF]  New Feature
[FIX] Bug Fixed


JIF 3.6 (Feb 2013)
==================
- [FIX] new Font for the GUI (Dialog, 12)
- [FIX] adjustSplit method to limit console's dimension
- [FIX] open changelog.txt now works
- [FIX] changelog.txt and readme.txt has the caret's position set to zero
- [FIX] default editor font is now Courier New,0,13
- [FIX] new light gray color for the line numbers panel

- [FIX] All configuration settings saved correctly
        * helped code check
        * warning highlight colour
        * frame location (X, Y)
        * frame size (Height, Width)
- [FIX] Definition search
        * projects with text files. (INDEX OUT OF BOUNDS)
        * Searching for an array name now works.
- [FIX] Tree display algorithm improved:
        * reference to parent class that does not exist displays a placeholder.
        * all children of a class are displayed.
        * all project classes displayed when scan project option set.
        * project classes not displayed when displayed file is not in project.
        * clicking any item that is not in the displayed file does nothing.
        * mouse movements no longer expand level one of the tree.
        * objects declared with nearby appear in the tree.
        * every declaration on a line appears in the tree not just the first.
- [FIX] Tab titles are now always reduced to less than 20 characters.
- [FIX] Spaces in run inform/glulx/blorb interpreter messages.
- [FIX] Spaces in not found message.
- [FIX] No extra spaces when using ENTER key rather than mouse for inset symbol.
- [FIX] Switches are not duplicated by new project command.
- [FIX] Jump to source on an array name now works.
- [FIX] Highlighting of Switchoff, Switchon and Wait library verbs.
- [FIX] Highlighting of #Stub directive.
- [NF]  Project list displays different icons for: 
        * closed file (except main file)
        * closed main file
        * open file (except main file)
        * open main file