@@ -12,6 +12,7 @@ JIF 3.6 (Feb 2013)
 - [FIX] changelog.txt and readme.txt has the caret's position set to zero
 - [FIX] default editor font is now Courier New,0,13
 - [FIX] new light gray color for the line numbers panel
+- [FIX] removed CaretListener (to optimize performance)
 
 - [FIX] All configuration settings saved correctly
         * helped code check
